# otus-homework-05-editor

./: CMakeLists.txt  Doxyfile  README.md  annotated.html  classCircle-members.html  classCircle.html  classController-members.html  classController.html  classDocument-members.html  classDocument.html  classLine-members.html  classLine.html  classObservable-members.html  classObservable.html  classObserver-members.html  classObserver.html  classRectangle-members.html  classRectangle.html  classShape-members.html  classShape.html  classView-members.html  classView.html  classes.html  controller_8h_source.html  dir_3d69f64eaf81436fe2b22361382717e5.html  dir_4897e8f140324156dc092d93a6fe80ec.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  document_8h_source.html  files.html  functions.html  functions_func.html  hierarchy.html  md_README.html  observer_8h_source.html  pages.html  shapes_8h_source.html  view_8h_source.html
.github/workflows/: doxygen-gh-pages.yml  release.yml
include/core/: controller.h  document.h  model.h  observer.h  view.h
include/shapes/: circle.h  color.h  creator.h  line.h  point.h  rectangle.h  shape.h  shapes.h  triangle.h
search/: all_0.js  all_4.js  classes_0.js  searchdata.js
src/: controller.cpp  main.cpp  model.cpp  view.cpp
src/core/: controller.cpp  document.cpp  observer.cpp
src/shapes/: shapes.cpp
